# Mandel_C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Mandel_C  Mandel_C_3.1.cpp  Mandel_C_3.1.ilk  README.md  a.out  cmake_install.cmake  coloring.h  frac_func.h  global.h  main  main.cpp  matrix.h  threadLauncher.h  thread_launcher.h
Fast Mandel_C/Mandel_C_3.1/: Mandel_C_3.1.cpp  Mandel_C_3.1.vcxproj  Mandel_C_3.1.vcxproj.filters
Fast Mandel_C/Mandel_C_3.1/x64/Debug/: Mandel_C_3.1.pch  vc141.idb
Fast Mandel_C/Mandel_C_3.1/x64/Debug/Mandel_C_3.1.tlog/: CL.read.1.tlog  Mandel_C_3.1.lastbuildstate  link.read.1.tlog
Fast Mandel_C/x64/Debug/: Mandel_C_3.1.ilk
Mandel_C 3.1/: Mandel_C_3.1.cpp  README.md
Mandel_C 3.1/x64/Debug/: Mandel_C_3.1.ilk
Mandel_C 3.1/x64/Debug/Mandel_C_3.1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog
Mandel_C_3.0/: Mandel_C_3.0.sln
include/: coloring.h  frac_func.h  global.h  thread_launcher.h
x64/Debug/: Mandel_C_3.1.pch  vc141.idb
x64/Debug/Mandel_C_3.1.tlog/: Mandel_C_3.1.lastbuildstate  link.command.1.tlog  link.write.1.tlog
